--- a/gui/geepui.ui
+++ b/gui/geepui.ui
@@ -17,45 +17,13 @@
         <property name="label">Export...</property>
       </object>
     </child>
-  </object>
-  
-  <!-- object class="GtkFileChooserDialog" id="save_chooser">
-    <property name="visible">False</property>
-    <property name="can_focus">False</property>
-    <property name="type_hint">dialog</property>
-    <property name="action">save</property>
     <child>
-      <placeholder/>
-    </child>
-    <child internal-child="vbox">
-      <object class="GtkBox">
+      <object class="GtkMenuItem" id="load">
         <property name="can_focus">False</property>
-        <property name="orientation">vertical</property>
-        <child internal-child="action_area">
-          <object class="GtkButtonBox">
-            <property name="can_focus">False</property>
-            <child>
-                <object class="GtkButton" id="save_dialog_cancel">
-                    <property name="visible">True</property>
-                    <property name="label">Cancel</property>
-                </object>
-            </child>
-            <child>
-                <object class="GtkButton" id="save_dialog_confirm">
-                    <property name="visible">True</property>
-                    <property name="label">Save</property>
-                </object>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
+        <property name="label">Load...</property>
       </object>
     </child>
-  </object -->
+  </object>
   
   <object class="GtkWindow" id="window">
     <property name="visible">True</property>
